Add comprehensive documentation for user creation, debugging, and quick fixes, including new markdown files for user creation, debugging backend issues, and quick fixes for connection errors. Also, introduce new services and modules for fee categories, fee structures, payments, schools, and students in the backend, enhancing the overall functionality and organization of the application.

--- a/backend/package.json
+++ b/backend/package.json
@@ -21,7 +21,11 @@
     "typeorm": "typeorm-ts-node-commonjs",
     "migration:generate": "typeorm-ts-node-commonjs migration:generate -d src/database/data-source.ts",
     "migration:run": "typeorm-ts-node-commonjs migration:run -d src/database/data-source.ts",
-    "migration:revert": "typeorm-ts-node-commonjs migration:revert -d src/database/data-source.ts"
+    "migration:revert": "typeorm-ts-node-commonjs migration:revert -d src/database/data-source.ts",
+    "create:admin": "ts-node -r tsconfig-paths/register src/scripts/create-admin.ts",
+    "create:school": "ts-node -r tsconfig-paths/register src/scripts/create-test-school.ts",
+    "setup:admin": "npm run create:admin && npm run create:school && npm run assign:school",
+    "assign:school": "ts-node -r tsconfig-paths/register src/scripts/assign-school-to-admin.ts"
   },
   "dependencies": {
     "@nestjs/common": "^10.3.0",
