--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -24,7 +24,7 @@
       "@/*": ["src/*"]
     }
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "src/common/types/**/*"],
   "exclude": ["node_modules", "dist", "test"]
 }
 
