Update author information in package.json and introduce pagination response DTOs for improved API response structure. Enhance pagination handling in Super Admin controller and service, including search functionality for user retrieval. Refactor UI components for better pagination display and user experience across school and user management pages.

--- a/backend/package.json
+++ b/backend/package.json
@@ -2,7 +2,7 @@
   "name": "fee-management-backend",
   "version": "1.0.0",
   "description": "School ERP Platform Backend API",
-  "author": "",
+  "author": "Aamir Bashir",
   "private": true,
   "license": "MIT",
   "scripts": {
