--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,8 @@
     "migration:run": "typeorm-ts-node-commonjs migration:run -d src/database/data-source.ts",
     "migration:revert": "typeorm-ts-node-commonjs migration:revert -d src/database/data-source.ts",
     "create:admin": "ts-node -r tsconfig-paths/register src/scripts/create-admin.ts",
+    "create:super-admin": "ts-node -r tsconfig-paths/register src/scripts/create-super-admin.ts",
+    "fix:orphaned-school-ids": "ts-node -r tsconfig-paths/register src/scripts/fix-orphaned-school-ids.ts",
     "create:school": "ts-node -r tsconfig-paths/register src/scripts/create-test-school.ts",
     "create:user": "ts-node -r tsconfig-paths/register src/scripts/create-test-user.ts",
     "setup:admin": "npm run create:admin && npm run create:school && npm run assign:school",
