--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "clsx": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.3.8",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.20.1"
   },
