Add User Roles and Notifications Management Features
- Introduced UserRoles module to manage user roles effectively, including CRUD operations for user roles.
- Added Notifications module to handle notifications, including creation, updating, and deletion functionalities.
- Implemented new scripts for fixing and updating user roles in the database, ensuring data integrity.
- Enhanced the app.module.ts to include the new modules, improving the overall structure of the application.
- Updated various controllers to utilize string-based role checks instead of enum, enhancing flexibility and maintainability.
- Added new endpoints and services for managing announcements, improving communication features within the application.

--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,8 @@
     "fix:orphaned-school-ids": "ts-node -r tsconfig-paths/register src/scripts/fix-orphaned-school-ids.ts",
     "create:school": "ts-node -r tsconfig-paths/register src/scripts/create-test-school.ts",
     "create:user": "ts-node -r tsconfig-paths/register src/scripts/create-test-user.ts",
+    "fix:user-roles": "ts-node -r tsconfig-paths/register src/scripts/fix-user-roles.ts",
+    "update:user-roles": "ts-node -r tsconfig-paths/register src/scripts/update-user-roles.ts",
     "setup:admin": "npm run create:admin && npm run create:school && npm run assign:school",
     "assign:school": "ts-node -r tsconfig-paths/register src/scripts/assign-school-to-admin.ts"
   },
