--- a/backend/package.json
+++ b/backend/package.json
@@ -48,6 +48,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cron": "^4.4.0",
+    "date-fns": "^4.1.0",
     "luxon": "^3.7.2",
     "nodemailer": "^7.0.12",
     "passport": "^0.7.0",
